Add initial frontend files version 2

--- a/rules.html
+++ b/rules.html
@@ -101,7 +101,7 @@
 
 <!-- SECTION 1: INTRODUCTION -->
 
-<h2><span class="emoji">ðŸŽ¾</span> Invite Friends to Join!</h2>
+<h2><span class="emoji">🎾</span> Invite Friends to Join!</h2>
 
 <p><strong>Share this WhatsApp group link:</strong> <a href="https://chat.whatsapp.com/EhHGGUyjX8e3GzcbwBTMc5" target="_blank">https://chat.whatsapp.com/EhHGGUyjX8e3GzcbwBTMc5</a></p>
 
